# tutor-contrib-meilisearch

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml
tutor_meili/: plugin.py
tutor_meili/patches/: caddyfile  k8s-deployments  k8s-jobs  k8s-services  k8s-volumes  local-docker-compose-caddy-aliases  local-docker-compose-cms-dependencies  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-services  openedx-auth  openedx-cms-production-settings  openedx-common-settings  openedx-development-settings  openedx-lms-development-settings
tutor_meili/templates/meilisearch/tasks/meilisearch/: init.sh
